# pre-commit-commit-msg-linter-hook

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
src/commit_msg/: hook.py
