[metadata]
name = commit-msg-linter-hook
version = 0.0.1
author = Darcy Bras da Silva
author_email = stardevelin@gmail.com
description = Checks if commit message matches the dardevelin commit rules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dardevelin/pre-commit-commit-msg-linter-hook.git
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    commit-msg-linter-hook = commit_msg.hook:main